fix gap in bottom page

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -806,6 +806,7 @@ h1:first-letter {
     }  
     .section {
         min-height: 91vh !important;
+        padding-bottom: 0;
     }  
     .donate-option {
         
